--- a/shares_app/templates/layouts/sideNav.html
+++ b/shares_app/templates/layouts/sideNav.html
@@ -74,6 +74,15 @@
                 <div data-i18n="Tables">Query Transaction</div>
               </a>
             </li>
+
+                    {% if request.user.is_staff %}
+          <li class="menu-item {% if request.resolver_match.url_name == 'all_transactions' %}active{% endif %}">
+              <a href="{% url 'all_transactions' %}" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-globe"></i>
+                <div data-i18n="Boxicons">All Transactions</div>
+              </a>
+            </li>
+        {% endif %}
             <!-- Misc -->
             <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
             <li class="menu-item">
